--- a/src/projectList.json
+++ b/src/projectList.json
@@ -3,7 +3,7 @@
     "image": "/assets/media-web-app.png",
     "title": "Media Web App",
     "techStach": "React.js - React Hooks - React Router - Tailwindcss",
-    "description": "A Frontend Mentor Challange. Demonstrates proficiency in implementing the UI/UX design, Working with JSON data, routing to different pages, managing state, and creating search functionality.",
+    "description": "This project demonstrates proficiency in implementing the UI/UX design, Working with JSON data, routing to different pages, managing state, and creating search functionality.",
     "liveLink": "https://media-web-app.netlify.app/",
     "repoLink": "https://github.com/AmmarCode/entertainment-web-app"
   },
@@ -11,7 +11,7 @@
     "image": "/assets/FEM8.png",
     "title": "REST Countries API",
     "techStach": "React.js - React Hooks - React Router - Tailwindcss",
-    "description": "A Frontend Mentor Challange. Demonstrates proficiency in implementing the UI/UX design, pulling data from a REST API, creating filtering and search functionalities.",
+    "description": "This project demonstrates proficiency in implementing the UI/UX design, pulling data from a REST API, creating filtering and search functionalities.",
     "liveLink": "https://rest-countries-api-fe.netlify.app/",
     "repoLink": "https://github.com/AmmarCode/rest-countries-api"
   },
@@ -19,7 +19,7 @@
     "image": "/assets/screenshot.png",
     "title": "PayAPI multi-page website",
     "techStach": "React.js - React Hooks - React Router - Tailwindcss",
-    "description": "A Frontend Mentor Challange. Demonstrates proficiency in implementing the UI/UX design using advanced css.",
+    "description": "This project demonstrates proficiency in implementing the UI/UX design using advanced css.",
     "liveLink": "https://payapi-frontend.netlify.app/",
     "repoLink": "https://github.com/AmmarCode/payApiFrontEnd"
   }
